{
    "name": "PlayerInputSet",
    "maps": [
        {
            "name": "Player",
            "id": "6eb02374-8484-4eff-8a92-b43039308bf6",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "512dd330-3ee6-45a9-aa97-e8cf70f7ff39",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "c6d7cf3c-3fbb-4a89-bcea-652602d5ed83",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Dash",
                    "type": "Button",
                    "id": "7fbc10d5-e08e-428a-a8fe-8d30cc9fb145",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Attack",
                    "type": "Button",
                    "id": "c9c4434e-5873-4887-a1c8-dcf1b19c8951",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "89b5f5eb-d3f8-44a8-bea7-27c16594e1da",
                    "path": "2DVector(mode=1)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "05f0c5a1-947a-4d6d-a48e-a411c79c5792",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard & Mouse",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "3203d66d-4c21-4b63-b995-faf1f0408c33",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "400b2bd8-2d0d-4b62-aaab-705c6e1bfbc3",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "bbbd8e25-da36-4a12-85ff-d9e1ed48636a",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "238164fc-83c2-4237-8c7b-262cd91659bc",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard & Mouse",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bd8ee788-855c-4f29-aeb2-9efe4127c648",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Dash",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "13987f01-e887-4f7e-934a-665a48bd3eb6",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard & Mouse",
                    "action": "Attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard & Mouse",
            "bindingGroup": "Keyboard & Mouse",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}